# LocalLLMChat

./: CLAUDE.md  GEMINI.md  INSTALL.md  LICENSE  MODELS.md  README.md  SETUP.md  commit_message  install-chromebook.sh  install-linux.sh  install-macos.sh  install-service-linux.sh  install-windows.ps1  pyproject.toml  update-models.sh
src/: __init__.py
src/local_llm_chat/: __init__.py  app.py
src/local_llm_chat/templates/: chat.html
